# wg_display_embedded

./: .clippy.toml  .gitignore  Cargo.toml  Makefile  README.md  partitions.csv  widget_store.json
.cargo/: config.toml
.github/workflows/: pages.yml  rust_ci.yml
common/: Cargo.toml  README.md
common/src/: lib.rs  models.rs  widget_store_item.rs
docs/: _config.yml  architecture.md  index.html  index.md  manifest.json
embedded_app/: .clippy.toml  Cargo.toml
embedded_app/.cargo/: config.toml
embedded_app/src/: main.rs
embedded_app/src/display/: mod.rs
embedded_app/src/http_client/: mod.rs
embedded_app/src/http_server/: custom_types.rs  frontend.rs  mod.rs
embedded_app/src/renderer/: mod.rs
embedded_app/src/runtime/: README.md  http_sync.rs  mod.rs  platform.rs  test_widget_new.compiled
embedded_app/src/runtime/host_api/: clocks.rs  http.rs  logging.rs  mod.rs  random.rs  types.rs
embedded_app/src/storage/: mod.rs
embedded_app/src/util/: esptime.rs  globals.rs  hasher.rs  mod.rs
embedded_app/src/widget/: mod.rs
embedded_app/src/widget/manager/: mod.rs
embedded_app/src/widget/store/: mod.rs
embedded_app/src/wifi/: mod.rs
frontend/: Cargo.toml  README.md  Trunk.toml  index.html  input.css  output.css  package-lock.json  package.json
frontend/assets/html/: widget_config.html
frontend/src/components/: error_display.rs  mod.rs  wifi_credentials_config.rs
frontend/src/pages/: config_schema.rs  home.rs  install.rs
src/: main.rs
src/common/: models.rs  widget_store_item.rs
src/display/: mod.rs
src/http_client/: mod.rs
src/http_server/: mod.rs  test.html
src/runtime/: README.md  http_bridge.rs  http_sync.rs  mod.rs  platform.rs
src/runtime/host_api/: clocks.rs  http.rs  logging.rs  random.rs  types.rs
src/storage/: mod.rs
src/util/: globals.rs
src/widget/manager/: mod.rs
src/widget/store/: mod.rs
src/wifi/: mod.rs  wifi.rs
