[package]
name = "common"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
yew = ["dep:yew", "dep:gloo-net", "dep:gloo-console", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
yew = { version = "0.20.0", features = ["csr"], optional = true }
gloo-net = { version = "0.4.0", optional = true }
gloo-console = { version = "0.3.0", optional = true }
wasm-bindgen = { version = "0.2.95", optional = true }
wasm-bindgen-futures = { version = "0.4.45", optional = true }