[package]
edition      = "2024"
license      = "MIT"
name         = "embedded_wg_display"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "embedded_wg_display"
# path = "./src/bin/main.rs"

[dependencies]
common = { path = "../common" }
esp-hal = { version = "~1.0.0", features = ["defmt", "esp32s3", "unstable", "psram"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

defmt = {version = "1.0.1"} 
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

embassy-net = { version = "0.8.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "dns",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
embedded-nal-async = "0.9.0"

# might be able to enable more features, needs testing
embedded-hal-bus = { version = "0.3.0" }
mipidsi = { version = "0.10.0" }
embedded-graphics = { version = "0.8.2"  }
embedded-graphics-framebuf = "0.5.0"
esp-storage = {version = "0.8.1", features = ["defmt", "esp32s3"]}
embedded-storage = {version = "0.3.1"}
esp-nvs = {version = "0.3.0", features = ["defmt", "esp32s3"]}
reqwless = { version = "0.14.0", default-features = false, features = [
  "embedded-tls",
  "alloc",
] }
heapless = { version = "0.9.2", features = ["serde"] }
hashbrown = { version = "0.16.1", default-features = false, features = ["default-hasher"] }
# picoserve = { version = "0.17.1", features = ["embassy", "defmt", "json"] }

# Fix for embedded-tls 0.18.0 compatibility issue with der crate
# See: https://github.com/drogue-iot/embedded-tls/issues/181
# The stable der v0.8.0 broke API compatibility, force use of RC version
der = { version = "=0.8.0", features = ["derive", "oid", "time", "heapless"] }
# Wasmtime 41+ required for Pulley interpreter (Xtensa architecture support)
wasmtime = { version = "42.0.1", default-features = false, features = ["runtime", "component-model", "pulley"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
picoserve = { version = "0.18.0", features = ["embassy", "defmt", "json"] }
serde-json-core = "0.6.0"
serde_json = {version = "1.0.149", default-features = false, features = ["alloc"] }
nb = "1.1.0"
embedded-hal = "1.0.0"
edge-nal = "0.6.0"
edge-dhcp = "0.7.0"
edge-nal-embassy = "0.8.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

# use custom partition table
# [package.metadata.espflash]
# partition_table = "partitions.csv"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
