[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
common = { path = "../common", features = ["yew"]  }

yew = { version = "0.23.0", features = ["csr"] }
yew-router = "0.20.0"
yew-hooks = "0.6.4"
yew_icons = { version = "0.10.0", features = ["lucide"] }
web-sys = { version = "0.3.95", features = [
    "HtmlSelectElement",
    "HtmlInputElement",
    "HtmlButtonElement",
] }
wasm-bindgen = "0.2.118"
gloo-net = "0.7.0"
gloo-console = "0.4.0"
wasm-bindgen-futures = "0.4.33"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
